<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:key="general"
                        android:title="@string/general_settings_title">

        <ListPreference android:key="theme"
                        android:defaultValue="light"
                        android:title="@string/theme_title"
                        android:entries="@array/theme_entries"
                        android:entryValues="@array/theme_values" />

        <CheckBoxPreference android:key="ignore_no_headset"
                            android:defaultValue="false"
                            android:title="@string/ignore_no_headset_title"
                            android:summary="@string/ignore_no_headset_summary" />

    </PreferenceCategory>

    <PreferenceCategory android:key="tuning"
                        android:title="@string/tuning_settings_title">

        <ListPreference android:key="seek_sensitivity"
                        android:defaultValue="12"
                        android:title="@string/seek_sensitivity_title"
                        android:summary="@string/seek_sensitivity_summary"
                        android:entries="@array/seek_sensitivity_entries"
                        android:entryValues="@array/seek_sensitivity_values" />

    </PreferenceCategory>

    <PreferenceCategory android:key="buttons"
                        android:title="@string/button_settings_title">

        <ListPreference android:key="media_button_behaviour"
                        android:defaultValue="preset"
                        android:title="@string/media_button_title"
                        android:summary="@string/media_button_summary"
                        android:entries="@array/media_button_entries"
                        android:entryValues="@array/media_button_values" />

    </PreferenceCategory>

    <PreferenceCategory android:key="backup_restore"
                        android:title="@string/backup_restore_title">

        <Preference android:key="backup_presets"
                    android:title="@string/backup_presets_title"
                    android:summary="@string/backup_presets_summary" />

        <Preference android:key="restore_presets"
                    android:title="@string/restore_presets_title"
                    android:summary="@string/restore_presets_summary" />

    </PreferenceCategory>

</PreferenceScreen>
