<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal" >

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/status_bg"
        android:scaleType="center"
        android:src="@drawable/fm_statusbar_icon" />

    <TextView
        android:id="@+id/status_bar_summary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ellipsize="end"
        android:paddingLeft="@dimen/status_bar_button_info_container_padding_left"
        android:paddingRight="8dp"
        android:singleLine="true"
        android:textAppearance="@android:style/TextAppearance.StatusBar.EventContent.Title" />

    <ImageButton
        android:id="@+id/status_bar_previous"
        style="@style/StatusBarButton"
        android:contentDescription="@string/notification_previous"
        android:src="@drawable/fm_holo_dark_previous"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/status_bar_next"
        style="@style/StatusBarButton"
        android:contentDescription="@string/notification_next"
        android:src="@drawable/fm_holo_dark_next"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/status_bar_power"
        style="@style/StatusBarButton"
        android:contentDescription="@string/notification_stop"
        android:src="@drawable/ic_menu_power"
        android:visibility="gone" />

</LinearLayout>
